--- a/public/index.html
+++ b/public/index.html
@@ -12,5 +12,10 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script>
+      var Scrollbar = window.Scrollbar;
+
+      Scrollbar.init(document.querySelector("#root"));
+    </script>
   </body>
 </html>
